new file:   Resume.pdf 	modified:   aboutme.html

--- a/aboutme.html
+++ b/aboutme.html
@@ -178,7 +178,7 @@
 
         <div class="resume-link">
             <p>Check out my full</p>
-            <p><a href="resume.html">Resume</a></p>
+            <p><a href="Resume.pdf">Resume</a></p>
         </div>
     </div>
 
