modified:   index.html

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                         <a class="nav-link" href="aboutme.html"><b>About Me</b></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#projects"><b>Projects</b></a>
+                        <a class="nav-link" href="https://github.com/noobremon?tab=repositories"><b>Projects</b></a>
                     </li>
                     
                     <li class="nav-item">
